Kubernetes_k3s/nextcloud/nextcloud-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: nextcloud
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    referrerPolicy: "no-referrer"
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 1552000
    permissionsPolicy: "geolocation=(self), microphone=(), camera=(), fullscreen=*"
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
      X-Robots-Tag: noindex, nofollow

---

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-redirectregex
  namespace: nextcloud
spec:
  redirectRegex:
    regex: "https://YOUR_NEXTCLOUD_URL/.well-known/(card|cal)dav"
    replacement: "https://YOUR_NEXTCLOUD_URL/remote.php/dav/"
    permanent: true
