Kubernetes_k3s/nextcloud/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: nextcloud
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:latest
        ports:
        - containerPort: 3306
        resources:
          limits:
            memory: "1000Mi"
          requests:
            memory: "600Mi"
        args:
        - --transaction-isolation=READ-COMMITTED
        - --binlog-format=ROW
        - --max-connections=1000
        volumeMounts:
        - name: db
          mountPath: /path/to/mysql
      volumes:
      - name: db
        persistentVolumeClaim:
          claimName: pvc-mariadb-db

---

apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: nextcloud
spec:
  selector:
    app: mariadb
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
  selector:
    app: mariadb
