Kubernetes_k3s/nextcloud/nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "1000Mi"
          requests:
            memory: "768Mi"
            cpu: "200m"
        volumeMounts:
        - name: nextcloud-system-data
          mountPath: /path/to/html
          subPath: html
        - name: nextcloud-system-data
          mountPath: /path/to/custom_apps
          subPath: apps
        - name: nextcloud-system-data
          mountPath: /path/to/html/config
          subPath: config
        - name: nextcloud-data
          mountPath: /path/to/html/data
      volumes:
      - name: nextcloud-system-data
        persistentVolumeClaim:
          claimName: pvc-nextcloud-root
      - name: nextcloud-data
        hostPath:
          path: /path/to/nextcloud
          type: DirectoryOrCreate

---

apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
  - name: http
    port: 80
    targetPort: 80
