Kubernetes_k3s/nextcloud/nextcloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: nextcloud-nextcloud-redirectregex@kubernetescrd,nextcloud-default-headers@kubernetescrd
spec:
  tls:
  - hosts:
    - YOUR_NEXTCLOUD_URL
    secretName: nextcloud-tls-cert
  rules:
  - host: YOUR_NEXTCLOUD_URL
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud # Matches Nextcloud service name
            port:
              number: 80 # Matches Nextcloud service external port
